# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = snafu
description = To store benchmark results in elasticsearch for long term investigations.
author = red-hat-performance
author-email = perf-dept@redhat.com
license = mit
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
version = file:version.txt
home-page = https://github.com/cloud-bulldozer/{name}

[options]
zip_safe = False
packages = find:
include_package_data = True
# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires = configparser; elasticsearch>=6.0.0,<=7.0.2; statistics; numpy; pyyaml; requests; redis; python-dateutil>=2.7.3; prometheus_api_client; scipy; openshift; setuptools>=40.3.0
# tests_require = pytest; pytest-cov
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
python_requires = >=3.6

[options.extras_require]
# Add here additional requirements for extra features, to install with:

[options.entry_points]
# Add here console scripts like:
console_scripts =
    run_snafu = snafu.run_snafu:main

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
