[metadata]
name = snafu
description = To store benchmark results in elasticsearch for long term investigations.
author = red-hat-performance
author_email = perf-dept@redhat.com
license = Apache License 2.0
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
version = file:version.txt
home_page = https://github.com/cloud-bulldozer/{name}

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    boto3
    configargparse
    configparser
    dataclasses
    elasticsearch>=6.0.0,<=7.0.2
    flent
    importlib_metadata
    kafka-python
    kubernetes==11
    numpy
    openshift==0.11
    prometheus_api_client
    python-dateutil>=2.7.3
    pyyaml
    redis
    requests
    scipy
    setuptools>=40.3.0
    statistics
    ttp
python_requires = >=3.6

[options.package_data]
* = version.txt

[options.extras_require]
docs =
    IPython
    ipykernel
    myst-parser
    nbsphinx
    notebook
    pandoc
    sphinx-rtd-theme
    sphinx<4
tests =
    tox

[options.entry_points]
console_scripts =
    run_snafu = snafu.run_snafu:main

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Package is pure-python
universal = 1
